Update the force_enable_zoom state to recreated input router in RenderWidgetHostImpl

This issue is caused by force_enable_zoom is not updated to the recreated input
router when open the new tab.

In this patch, we record the force_enable_zoom in RenderWidgetHostImpl, then
update the state to new input router when we create.

Bug: 821447
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I33308abe484de70f1e4d2189de4896a04b05d7ef
Reviewed-on: https://chromium-review.googlesource.com/961781
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544791}
Former-commit-id: 9cb0c3986c31a56341e7df5131d7346f79e5e4d4